# base-component-local-rpc-thrift

./: CMakeLists.txt  README.md
logger/: rslog.h  rslogger_declare.h  rslogging.h
ripcqccomponent/: CMakeLists.txt  abstractrequestrunqctask.cpp  abstractrequestrunqctask.h  global.h  ripcqcclient.cpp  ripcqcclient.h  ripcqcclientinterface.cpp  ripcqchandlercob.h  ripcqcinterfaceimpl.cpp  ripcqcinterfaceimpl.h  ripcqcinterfaceproxy.cpp  ripcqcinterfaceproxy.h  ripcqcservice.h  ripcqcservices.thrift  ripcqcservicescobclient.cpp  ripcqcservicescobclient.h  ripcqcservicesdataproxy.cpp  ripcqcservicesdataproxy.h  ripcqcserviceshost.cpp  ripcqcserviceshost.h  ripcqcserviceshostprivate.cpp  ripcqcserviceshostprivate.h  ripcqcservicesnotifytasks.cpp  ripcqcservicesnotifytasks.h  ripcqcservicesqcdataproxy.cpp  ripcqcservicesqcdataproxy.h  ripcsingleton.h  stdafx.h  typedef.h
ripcqccomponent/include/: ipc_client_interface.h  ipc_error.h
ripcqccomponent/ipcbase/: klocalsocket.cpp  kqtlocalsocket.cpp  kqtlocalsocket.h  kxmsglocalserver_unix.cpp  kxmsglocalserver_unix.h  ripc.h  ripcclientchannel.cpp  ripcclientchannel.h  ripcconstant.h  ripcservertoclientchannel.cpp  ripcservertoclientchannel.h  ripcservertoclientchannelprivate.cpp  ripcservertoclientchannelprivate.h  rlocalserver.cpp  rlocalserver.h  rlocalsocket.cpp  rlocalsocket.h  rlocalsocketdef.h  rmsglocalserver_unix.cpp  rmsglocalserver_unix.h  rqtlocalsocket.cpp  rqtlocalsocket.h  rs_ipc.h  rs_ipcclientchannel.cpp
ripcqccomponent/utils/: utils.cpp  utils.h
rpc_client_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  testipcclientnotify.cpp  testipcclientnotify.h
rpc_client_demo/include/: ipc_declare.h
rpc_srv_demo/: CMakeLists.txt
rpc_srv_demo/config/: sys_cfg.json
rpc_srv_demo/src/: authorizedinfojob.cpp  authorizedinfojob.h  main.cpp  requestrunqctask.cpp  requestrunqctask.h  ripcqcserver.cpp  ripcqcserver.h  userloginjob.cpp  userloginjob.h  utils.cpp  utils.h
rpc_srv_demo/threadpool/: rbasejob.cpp  rbasejob.h  rthreadpool.cpp  rthreadpool.h  rthreadpoolbase.cpp  rthreadpoolbase.h  rthreadpoolcallback.cpp  rthreadpoolcallback.h  rthreadpoolconst.h
rpc_srv_demo_linux/: CMakeLists.txt
rpc_srv_demo_linux/src/: authorizedinfojob.cpp  authorizedinfojob.h  main.cpp  requestrunqctask.cpp  ripcqcserver.cpp  ripcsingleton.h  rsingleton.h  userloginjob.cpp  userloginjob.h
rpc_srv_demo_linux/threadpool/: rbasejob.cpp  rbasejob.h  rpevents.cpp  rpevents.h  rthreadpool.cpp  rthreadpool.h  rthreadpoolcallback.cpp  rthreadpoolcallback.h  rthreadpoolconst.h  rthreadpooldefine.h
